@@ -27,6 +27,9 @@ Changes log
          containers to stop the application. Issue #1058.
          Reported by Constantin Gruber.
        - Fixed duplication of headers (jaxrs). Issues #944, #948.
+       - Redirector does not translate response's entity location reference.
+         Issue #1069.
+
     - Misc
        - Completed the Javadocs for query parameter declarations inside
          HTTP method annotations such as @Get("json?param=val).
